# leather-pattern-designer

./: .gitignore  CLAUDE.md  Leather Pattern Designer.lnk  README.md  STYLE_GUIDE.md  index.html  run-smoke.cmd
.claude/commands/: smoketest-full.md  smoketest-quick.md
.github/workflows/: release.yml
MD files/: CONTEXT.md  DEVLOG.md  SEAM-MODEL.md  SHORTCUTS.md  SKILL.md
MD files/references/: algorithm.md
desktop/: .gitignore  README.md  build-info.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs
tests/: run-build-smoke.ps1  run-smoke.ps1  smoke-harness.js
